@@ -1,7 +1,7 @@
 1..1448
 # Running under perl version 5.008007 for linux
-# Current time local: Fri Nov 23 23:45:39 2007
-# Current time GMT:   Fri Nov 23 14:45:39 2007
+# Current time local: Sat Nov 24 20:18:51 2007
+# Current time GMT:   Sat Nov 24 11:18:51 2007
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
@@ -1497,7 +1497,6 @@ ok 1350
 ok 1351
 ok 1352
 ok 1353
-# t/content-model-3.dat
 ok 1354
 ok 1355
 ok 1356
@@ -1517,9 +1516,9 @@ ok 1369
 ok 1370
 ok 1371
 ok 1372
+# t/content-model-3.dat
 ok 1373
 ok 1374
-# t/content-model-4.dat
 ok 1375
 ok 1376
 ok 1377
@@ -1539,6 +1538,7 @@ ok 1390
 ok 1391
 ok 1392
 ok 1393
+# t/content-model-4.dat
 ok 1394
 ok 1395
 ok 1396
@@ -1567,7 +1567,6 @@ ok 1418
 ok 1419
 ok 1420
 ok 1421
-# t/table-1.dat
 ok 1422
 ok 1423
 ok 1424
@@ -1581,14 +1580,13 @@ ok 1431
 ok 1432
 ok 1433
 ok 1434
-# t/content-model-atom-1.dat
-# t/content-model-atom-2.dat
 ok 1435
 ok 1436
 ok 1437
 ok 1438
 ok 1439
 ok 1440
+# t/table-1.dat
 ok 1441
 ok 1442
 ok 1443
@@ -1602,6 +1600,27 @@ ok 1450
 ok 1451
 ok 1452
 ok 1453
+# t/content-model-atom-1.dat
+# t/content-model-atom-2.dat
 ok 1454
 ok 1455
 ok 1456
+ok 1457
+ok 1458
+ok 1459
+ok 1460
+ok 1461
+ok 1462
+ok 1463
+ok 1464
+ok 1465
+ok 1466
+ok 1467
+ok 1468
+ok 1469
+ok 1470
+ok 1471
+ok 1472
+ok 1473
+ok 1474
+ok 1475
