@@ -1,7 +1,7 @@
 1..1734
 # Running under perl version 5.008007 for linux
-# Current time local: Fri Nov 23 23:45:26 2007
-# Current time GMT:   Fri Nov 23 14:45:26 2007
+# Current time local: Sat Nov 24 20:18:31 2007
+# Current time GMT:   Sat Nov 24 11:18:31 2007
 # Using Test.pm version 1.25
 ok 1
 ok 2
