@@ -1,3 +1,9 @@
+2007-11-24  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm (nest/@filter, rule/@condition): Implemented.
+	(nest/@mode): Definition was wrong.
+	($HTMLSelectorsAttrChecker): New.
+
 2007-11-23  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTML.pm (meta): Character references in |charset| attribute
