@@ -1,3 +1,8 @@
+2007-11-24  Wakaba  <wakaba@suika.fam.cx>
+
+	* content-model-2.dat: nest/@mode test data revised.
+	Test data for nest/@filter and rule/@condition are added.
+
 2007-11-23  Wakaba  <wakaba@suika.fam.cx>
 
 	* content-model-2.dat: Media type tests are revised.
