@@ -1,3 +1,7 @@
+2007-11-24  Wakaba  <wakaba@suika.fam.cx>
+
+	* SelectorsParser.pm (parse_string): Raise errors if appropriate.
+
 2007-10-28  Wakaba  <wakaba@suika.fam.cx>
 
 	* SelectorsSerializer.pm (serialize_test): Namespace prefix
